Se agregaron nuevos permisos, se agregaron vistas para los correos, se corrigieron errores

--- a/config.env
+++ b/config.env
@@ -12,7 +12,7 @@ EMAIL_PASSWORD=1651f7be625d88
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 EMAIL_FROM=dpovedat@unal.edu.co
 
 ALGOLIA_ID=6H4KACRS7R
