--- a/config.env
+++ b/config.env
@@ -6,13 +6,14 @@ DATABASE_LOCAL=mongodb://localhost:27017/unbiters
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=10d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=ddc6fe1bd17be3
 EMAIL_PASSWORD=1651f7be625d88
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 EMAIL_FROM=dpovedat@unal.edu.co
 
 ALGOLIA_ID=6H4KACRS7R
