--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ EMAIL_PASSWORD=1651f7be625d88
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 EMAIL_FROM=dpovedat@unal.edu.co
 
 ALGOLIA_ID=6H4KACRS7R
