add upload cloudfinary images and delete server images

--- a/config.env
+++ b/config.env
@@ -23,3 +23,7 @@ ALGOLIA_USAGE_API_KEY=db699862433d1664aa5d4521e2b62cc2
 
 EPAYCO_PUBLIC_KEY=6d5068a8cbb041349d7a966ba8e9b133
 EPAYCO_PRIVATE_KEY=de95e8ec0a1d94865b60faa33dadd72e
+
+CLOUDINARY_CLOUD_NAME = dspkxyhbb
+CLOUDINARY_API_KEY = 946845934391742
+CLOUDINARY_API_SECRET = SuLI54oulsoEkYJzHQ0xZIs5Nyk
