--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
     "start:prod": "set NODE_ENV=production && nodemon index.js",
-    "watch:js": "parcel watch" 
+    "watch:js": "parcel watch"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "algoliasearch": "^4.20.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.1",
+    "fs-extra": "^11.1.1",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
