Corrección de errores y estadistica de publicaiones por sexo de mis chazas

--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ EMAIL_PASSWORD=1651f7be625d88
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 EMAIL_FROM=dpovedat@unal.edu.co
 
 ALGOLIA_ID=6H4KACRS7R
