Paso de ambiente de developer a production para poder visualizar errores y corrección de errores.

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 DATABASE_PASSWORD=cTgFq0HBuDEneqlT
 DATABASE=mongodb+srv://David_Stiven:<PASSWORD>@cluster0.js6m8bl.mongodb.net/unbiters?retryWrites=true&w=majority
