Login con google

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=3000
 DATABASE_PASSWORD=cTgFq0HBuDEneqlT
 DATABASE=mongodb+srv://David_Stiven:<PASSWORD>@cluster0.js6m8bl.mongodb.net/unbiters?retryWrites=true&w=majority
@@ -27,3 +27,7 @@ EPAYCO_PRIVATE_KEY=de95e8ec0a1d94865b60faa33dadd72e
 CLOUDINARY_CLOUD_NAME = dspkxyhbb
 CLOUDINARY_API_KEY = 946845934391742
 CLOUDINARY_API_SECRET = SuLI54oulsoEkYJzHQ0xZIs5Nyk
+
+GOOGLE_CLIENT_ID = 779800342168-o4hu0r1q4c7p6a0gm94bfptfv2jle9b5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+SESSION_SECRET = estaesunaclavesecreta
