--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ EMAIL_PASSWORD=1651f7be625d88
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 EMAIL_FROM=dpovedat@unal.edu.co
 
 ALGOLIA_ID=6H4KACRS7R
